deploy/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  labels:
    app: heart-disease-api
spec:
  selector:
    app: heart-disease-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: LoadBalancer
